2004-06-26  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/installer.rb (Gem::Uninstaller::uninstall): Fixed
	null pointer bug where a list was destroyed in a method.

	* lib/rubygems/gem_commands.rb (Gem::BuildCommand::load_gemspecs):
	yaml gemspec files are now accepted by the build command.

	* lib/rubygems/command.rb (Gem::Command::parser): Created an
	on-demand option parser for all commands.
	(Gem::Command::handle_options): Command line option hash is now
	and instance variable with a reader.

	* Rakefile: Linked package version to the value in the rubygems.rb
	file.  The gem env command now shows both gem version (e.g. 0.6)
	and the package version (e.g. 0.6.1).

2004-06-25  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/gem_commands.rb (Gem::InfoCommand): Dropped the
	version command (its available via gem env).  Added a gem info
	command to extract the yaml from a gemfile.
	(Gem::LocalRemoteOptions): Refactored the local/remote options
	(adding and testing) into a mixin module.

	* test/test_version_comparison.rb
	(TestDependencies::test_normalization): Added some tests for the
	normalization issues mentions below.

	* lib/rubygems/version.rb (Gem::Dependency::normalize): Old gems
	have requirements and dependencies incoded in the Yaml spec in an
	out of date format.  When loaded, they have incorrect instance
	variables for modern objects.  I added a normalize call to handle
	transforming out dated objects in to modern objects. (Remember
	this next time we change the data structure of something in the
	spec file.)
	(Gem::Version::Requirement::parse): Requirements are comparable
	now, just so that we can test them with asserts.

	* lib/rubygems/remote_installer.rb
	(Gem::RemoteInstaller::find_dependencies_not_installed): Fixed
	recursive call to require_gem to properly pass dependency
	information.
	
	* lib/rubygems/installer.rb (Gem::Uninstaller::has_dependents):
	Fixed reference to version_requirement (needs to be plural).
